# aranet_to_mqtt

./: AGENTS.md  Dockerfile  README.md  aranet_to_mqtt.py  pyproject.toml
.github/workflows/: build.yml  lint.yml
tests/: test_fetch_records.py  test_publish_records.py
