[project]
name = "aranet-to-mqtt"
version = "0.1.0"
description = "Aranet RN+ to MQTT bridge"
requires-python = ">=3.12"
dependencies = [
    "aranet4>=2.6.0",
    "paho-mqtt>=2.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"
